# SCA-training-sim-BE

./: .env.example  README.md  pyproject.toml  seed_database.py
alembic/: env.py
alembic/versions/: 2ba9283d9ced_inital_commit.py
app/: main.py
app/api/: deps.py
app/api/routers/: __init__.py  admin.py  case.py  consultation.py  user.py
app/core/: config.py  logging_config.py
app/db/: db_storage.py
app/models/: base_model.py  case.py  consultation.py  patient_case.py  peer_comment.py  user.py
app/prompts/: generate_case_prompt.md  scoring_rubric.md
app/schema/: case.py  consultation.py  user.py
app/services/: consultation.py
