[project]
name = "sca-training-sim-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "openai>=1.76.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "replit>=4.1.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "email-validator>=2.1.0",
    "pydantic-settings>=2.2.1",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "loguru>=0.7.3",
    "alembic>=1.15.2",
]